// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with image 1`] = `
<img
  alt="Sorry"
  className="Image"
  src="cateyes.jpg"
/>
`;

exports[`renders without props 1`] = `
<img
  alt="Sorry"
  className="Image"
/>
`;
